# stm32cubeprog-rs

./: .gitignore  Cargo.toml  README.md
examples/: discover.rs  reset_target.rs
src/: bindings.rs  err.rs  lib.rs
