[package]
name = "stm32cubeprog-rs"
version = "0.0.4"
authors = ["Vincent Werner <wervin.dev@gmail.com>"]
description = "Rust API for STM32CubeProgrammer"
repository = "https://github.com/wervin/stm32cubeprog-rs"
license = "MIT OR Apache-2.0"
exclude = [
    "src/bin/*",
    "tests/*",
    ".git*"
]

[dependencies]
libloading = "0.8.1"
widestring = "1.0.2"